// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component 1`] = `
{
  "custom_id": "button_id",
  "label": "Click me",
  "style": 1,
  "type": 2,
}
`;

exports[`Action row component 1`] = `
{
  "components": [],
  "type": 1,
}
`;

exports[`Command option component 1`] = `
{
  "description": "test",
  "max_length": 10,
  "name": "test",
  "type": 3,
}
`;

exports[`String select menu component 1`] = `
{
  "custom_id": "select_id",
  "options": [
    {
      "label": "test",
      "value": "test",
    },
  ],
  "type": 3,
}
`;

exports[`Channel select menu component 1`] = `
{
  "custom_id": "select_id",
  "type": 8,
}
`;

exports[`User select menu component 1`] = `
{
  "custom_id": "select_id",
  "type": 5,
}
`;

exports[`Role select menu component 1`] = `
{
  "custom_id": "select_id",
  "type": 6,
}
`;

exports[`Mentionable select menu component 1`] = `
{
  "custom_id": "select_id",
  "type": 7,
}
`;

exports[`Text input component 1`] = `
{
  "custom_id": "input_id",
  "label": "test",
  "style": 1,
  "type": 4,
}
`;

exports[`Text input component 2`] = `
{
  "custom_id": "input_id",
  "label": "test",
  "style": 2,
  "type": 4,
}
`;

exports[`Section component 1`] = `
{
  "accessory": {
    "custom_id": "button_id",
    "label": "Click me",
    "style": 1,
    "type": 2,
  },
  "components": [
    {
      "content": "test",
      "type": 10,
    },
  ],
  "type": 9,
}
`;

exports[`Text display component 1`] = `
{
  "content": "test",
  "type": 10,
}
`;

exports[`Thumbnail component 1`] = `
{
  "media": {
    "url": "https://example.com",
  },
  "type": 11,
}
`;

exports[`Media gallery component 1`] = `
{
  "id": 1,
  "items": [
    {
      "media": {
        "url": "https://example.com",
      },
    },
  ],
  "type": 12,
}
`;

exports[`File component 1`] = `
{
  "file": {
    "url": "https://example.com",
  },
  "type": 13,
}
`;

exports[`Separator component 1`] = `
{
  "spacing": 1,
  "type": 14,
}
`;

exports[`Container component 1`] = `
{
  "components": [
    {
      "components": [
        {
          "custom_id": "1",
          "label": "Click me",
          "style": 1,
          "type": 2,
        },
        {
          "custom_id": "2",
          "label": "Click me",
          "style": 1,
          "type": 2,
        },
      ],
      "type": 1,
    },
    {
      "spacing": 1,
      "type": 14,
    },
  ],
  "type": 17,
}
`;
